# GameMaster

api/: README.md  app.py  cdk.json  pyproject.toml  setup.py
api/.chalice/: config.json  policy-dev.json
api/.chalice/deployed/: dev.json
api/api/: api_stack.py
api/app/: api_stack.py
api/assets/: dummy.csv  lambda.py
